src/objects/SDO_News__c.object
<CustomObject>
    <fields>
        <fullName>News_Content__c</fullName>
        <description>The content for your news item. eg a description of a new feature or a link to a video with some commentary.</description>
        <label>News Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>News_Item_Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Showcase_Link__c</fullName>
        <label>Showcase Link</label>
        <type>Url</type>
    </fields>
    <label>SDO News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SDO News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDO News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>